# se-theory-reference-kit

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  DECISIONS.md  README.md  SE_MANIFEST.toml  pyproject.toml  rel.ps1  zensical.toml
.accountability/: surfaces.toml
.github/: .importlinter
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  links.yml  pre-release.yml  release-pypi.yml
docs/: index.md
docs/en/: architecture.md  commands.md  index.md
docs/en/api/: index.md
docs/tools/: generate_api.py
src/se_theory_reference_kit/: __init__.py  cli.py  load.py
src/se_theory_reference_kit/base/: __init__.py  errors.py  io.py  json_utils.py  paths.py  results.py
src/se_theory_reference_kit/commands/: _context.py  catalog.py  export.py  inspect.py  root.py  scaffold.py  validate.py
src/se_theory_reference_kit/declarations/: __init__.py  config.py  export_spec.py  index.py  surface.py
src/se_theory_reference_kit/export/: __init__.py  catalog.py  engine.py
src/se_theory_reference_kit/lean/: __init__.py  declarations.py  modules.py  spec.py  surface.py
src/se_theory_reference_kit/reference/: __init__.py  artifacts.py  registry.py  stubs.py  validation.py
src/se_theory_reference_kit/validation/: __init__.py  context.py  defaults.py  registry.py  runner.py
src/se_theory_reference_kit/validation/checks/: __init__.py  export.py  lean_surface.py  reference_artifacts.py  reference_index.py  strict.py
tests/: test_commands_context.py  test_declarations.py  test_export.py  test_lean.py  test_load.py  test_paths.py  test_reference.py  test_validation.py
